--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         if (button) { // Periksa apakah tombol ditemukan sebelum menambahkan event listener
             button.addEventListener('click', function() {
-                window.location.href = 'https://youtu.be/dQw4w9WgXcQ'; 
+                window.location.href = 'https://vt.tiktok.com/ZSAk1ABTF/'; 
                 // Atau window.open('https://www.google.com', '_blank'); untuk tab baru
             });
         } else {
